Fix issue of footer scrolling text not visible on mobile

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,4 +1,7 @@
 @media screen and (min-width: 768px) {
+	html {
+		min-height: 100%;
+	}
 	.header {
 		grid-template-areas: 'logo content';
 		grid-template-columns: auto .65fr;
