--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -24,7 +24,7 @@ html {
 	font-family: $primary-font;
 	font-size: 1rem;
   font-size: max(1rem, 16px);
-  height: 100%;
+  min-height: calc(100vh - 48px);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
